--- a/style.css
+++ b/style.css
@@ -200,3 +200,53 @@ body {
     line-height: 1;
     /* text-transform: capitalize; */
 }
+
+.dev p{
+    font-size: 1.5vw;
+    margin-top: 3vw;
+    letter-spacing: -0.5px;
+    width: 60%;
+}
+
+
+.slides{
+    padding: 3vw 8vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.slide{
+    width: 30%;
+    /* height: 100px; */
+    /* background-color: red; */
+}
+
+.slide .img{
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: yellow;
+
+}
+
+.slide .img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slide .tag{
+    width: fit-content;
+    border-radius: 100px;
+    padding: 10px 22px;
+    background-color: #f7f7f7;
+    margin: 20px 0;
+}
+
+.slide h3{
+    font-size: 1.4vw;
+    font-weight: 400;
+    letter-spacing: -0.5px;
+}
