--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 .main {
     width: 100%;
     background-color: #fff;
+    margin-bottom: 10vw;
 }
 
 .home {
@@ -73,7 +74,7 @@ body {
     gap: 40px;
 }
 
-.headings h1{
+.home-main .headings h1{
     color: transparent;
     -webkit-text-stroke: 1px black;
     font-size: 7vw;
@@ -82,6 +83,10 @@ body {
     letter-spacing: -5px;
 }
 
+.home-main .headings h1:hover{
+    color: #000;
+    cursor: auto;
+}
 
 .home-last {
     padding: 4vw 15vw;
@@ -163,13 +168,19 @@ body {
     justify-content: flex-end;
     width: 45%;
     height: inherit;
-    border: 1px solid antiquewhite;
+    /* border: 1px solid antiquewhite; */
 }
 
 .fright .images{
     width: 90%;
     height: 90%;
-    background-color: red;
+    /* background-color: red; */
+}
+
+.fright .images img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .btn{
@@ -227,7 +238,7 @@ body {
     height: 250px;
     overflow: hidden;
     border-radius: 10px;
-    background-color: yellow;
+    /* background-color: yellow; */
 
 }
 
